# advent_of_code_2021

./: Cargo.toml  README.md
src/: main.rs
src/data_structures/: binary_tree.rs  double_linked_list.rs  mod.rs  rc_binary_tree.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
src/day_09/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs
src/day_14/: mod.rs
src/day_15/: mod.rs  mod_a_star.rs  mod_new_old.rs
src/day_16/: mod.rs
src/day_17/: mod.rs
src/day_18/: mod.rs
src/day_18/trying_iterative_way/: mod.rs  snailfish_number.rs
src/day_19/: mod.rs  mod_mine.rs  mod_nightly.rs
src/day_20/: mod.rs
src/day_21/: mod.rs
src/day_22/: mod.rs
src/day_23/: mod.rs
src/day_24/: example.txt  mod.rs
src/day_25/: mod.rs
src/euclidean/: mod.rs
