[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.56"
humantime = "2.1.0"
owo-colors = "3.2.0"
itertools = "0.10.3"
hex = "0.4.3"
bitvec = "1"